# Azure-Storage-REST-Samples

./: .gitignore  README.md
List-Blobs/: CMakeLists.txt  README.md  main.cpp
List-Blobs/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  listblobs
common/inc/: AzureStorageAuthenticationHelper.h  sha256.h
common/src/: AzureStorageAuthenticationHelper.cpp  sha256.c
